multiple small gui changes per Annie/Dharma. Some of these fix wrapping issues for data title and metadata values.

--- a/edu.illinois.ncsa.mmdb.web/war/css/common.css
+++ b/edu.illinois.ncsa.mmdb.web/war/css/common.css
@@ -110,6 +110,10 @@ table.tablesorter tbody tr td:last-child {
 	padding:3px; 
 }
 
+#discovery {
+	padding-top: 12px;
+}
+
 #discovery .span3 {
 	margin-top: 0px;
 }
